# Fermion

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  info.md  temp_Entity.hpp
Boson/: BosonEditor.cpp  BosonLayer.cpp  BosonLayer.hpp  CMakeLists.txt
Boson/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Boson/Resources/Shaders/: BRDFLUT.glsl  Circle.glsl  DeferredLighting.glsl  FlatColor.glsl  GBufferMesh.glsl  GBufferOutline.glsl  GBufferPBRMesh.glsl  IBLPrefilter.glsl  IBLPreprocess.glsl  MaterialPreview.glsl  Mesh.glsl  PBRMesh.glsl  ProceduralSky.glsl  Quad.glsl  QuadInstance.glsl  SSGI.glsl  SkinnedGBufferPBRMesh.glsl  SkinnedPBRMesh.glsl  Skybox.glsl  Text.glsl
Boson/Resources/shaders/: DeferredLighting.glsl  GBufferDebug.glsl  IBLPrefilter.glsl  IBLPreprocess.glsl  Mesh.glsl  PBRMesh.glsl  QuadInstance.glsl  skybox.glsl
Boson/assets/project/: example.fmproj  test.fmproj
Boson/assets/scenes/: Physics2d.fermion  PinkCube.fermion  example.fermion
Boson/projects/: Project.fdat  test.fmproj
Boson/src/: BosonEditor.cpp  BosonLayer.cpp  BosonLayer.hpp  BosonLayer_Project.cpp  BosonLayer_Scene.cpp
Boson/src/Panels/: AssetManagerPanel.cpp  AssetManagerPanel.hpp  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MaterialEditorPanel.cpp  MaterialEditorPanel.hpp  MenuBarPanel.cpp  MenuBarPanel.hpp  OverlayRenderPanel.cpp  OverlayRenderPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp  TextureConfigPanel.cpp  TextureConfigPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
Fermion/: CMakeLists.txt
Fermion/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLPipeline.cpp  OpenGLPipeline.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Fermion/Platform/SFML/: ImGuiBackendSFML.hpp  SFMLKeyCodes.h  SFMLKeyCodes.hpp  SFMLMouseCodes.h  SFMLMouseCodes.hpp  SFMLRenderer.cpp  SFMLRenderer.h  SFMLRenderer.hpp  SFMLTimer.hpp  SFMLWindow.cpp  SFMLWindow.h  SFMLWindow.hpp
Fermion/Platform/Window/: GLFWKeyCodes.hpp  GLFWMouseCodes.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GLFWWindowInput.cpp  WindowsPlatformUtils.cpp
Fermion/Sources/: Fermion.hpp  fmpch.cpp  fmpch.hpp
Fermion/Sources/Animation/: AnimationClip.cpp  AnimationClip.hpp  AnimationClipSerializer.cpp  AnimationClipSerializer.hpp  AnimationSampler.cpp  AnimationSampler.hpp  Animator.cpp  Animator.hpp  BoneTransform.cpp  BoneTransform.hpp  Skeleton.cpp  Skeleton.hpp  SkeletonSerializer.cpp  SkeletonSerializer.hpp
Fermion/Sources/Asset/: Asset.hpp  AssetExtensions.hpp  AssetInfo.hpp  AssetManager.cpp  AssetManager.hpp  AssetManagerBase.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetSerializer.hpp  AssetSerialzer.hpp  AssetTypes.hpp  EditorAssetManager.hpp  RuntimeAssetManager.hpp  SceneAsset.hpp
Fermion/Sources/Core/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  EntryPoint.cpp  Input.hpp  KeyCodes.h  KeyCodes.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Time.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp  Yaml.hpp
Fermion/Sources/Debug/: Instrumentor.hpp
Fermion/Sources/Engine/: Engine.cpp  Engine.h  Engine.hpp
Fermion/Sources/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Fermion/Sources/ImGui/: BosonUI.hpp  ConsolePanel.cpp  ConsolePanel.hpp  ImGuiBackend.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ModalDialog.hpp  UI.hpp
Fermion/Sources/Math/: AABB.hpp  Math.cpp  Math.hpp
Fermion/Sources/Physics/: Physics2D.cpp  Physics2D.hpp  Physics3D.cpp  Physics3D.hpp  Physics3DJoltInit.cpp  Physics3DJoltInit.hpp  Physics3DLayers.cpp  Physics3DLayers.hpp  Physics3DShapes.cpp  Physics3DShapes.hpp  Physics3DTypes.cpp  Physics3DTypes.hpp
Fermion/Sources/Project/: Project.cpp  Project.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp
Fermion/Sources/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DebugRenderer.cpp  DebugRenderer.hpp  EditorCamera.cpp  EditorCamera.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  MSDFData.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Pipeline.cpp  Pipeline.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderCommandQueue.cpp  RenderCommandQueue.hpp  RenderCommands.hpp  RenderDrawCommand.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphLegacy.cpp  RenderGraphLegacy.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  (+22 more)
Fermion/Sources/Scene/: Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
Fermion/Sources/Script/: ScriptEngine.cpp  ScriptEngine.hpp  ScriptGlue.cpp  ScriptGlue.hpp  ScriptManager.hpp  ScriptTypes.hpp
Fermion/Sources/Time/: Timer.hpp
Fermion/Sources/Utils/: PlatformUtils.hpp
Oxygine/: CMakeLists.txt
Oxygine/Platform/SFML/: SFMLKeyCodes.h  SFMLMouseCodes.h  SFMLRenderer.cpp  SFMLRenderer.h  SFMLWindow.cpp  SFMLWindow.h
Oxygine/Sources/Core/: EntryPoint.cpp  KeyCodes.h  Log.cpp  Log.hpp  MouseCodes.h  Window.h
Oxygine/Sources/Engine/: Engine.cpp  Engine.h
Oxygine/Sources/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Oxygine/Sources/Renderer/: IRenderer.h
engine/: CMakeLists.txt
engine/include/Engine/: Engine.h  EngineCore.h
engine/include/Platform/: IWindow.h  SFMLRenderer.h  SFMLWindow.h
engine/include/Renderer/: IRenderer.h
engine/src/: Engine.cpp  EngineCore.cpp
engine/src/Engine/: Engine.cpp
engine/src/Platform/: SFMLRenderer.cpp  SFMLWindow.cpp
(+462 files in other folders)
